[package]
name = "screen_filter"
version = "0.1.0"
edition = "2024"

[dependencies]
auto-launch = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
win-hotkey = "0.3"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
